objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Forecasting Placeholder Process</fullName>
        <description>SFDC1-2157 New Sales Process for Forecasting Placeholder Opportunity record Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>1-Open</fullName>
        </values>
        <values>
            <fullName>6L-Forecasting Placeholder</fullName>
        </values>
        <values>
            <fullName>6W-Forecasting Placeholder</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Gratis Opportunity</fullName>
        <description>SFDC1-6554;Sales would like Gratis Opportunities to be tracked separately for reporting purposes</description>
        <isActive>true</isActive>
        <values>
            <fullName>1-Open</fullName>
        </values>
        <values>
            <fullName>3-Proposal Development</fullName>
        </values>
        <values>
            <fullName>4%2E1-Proposal%2FQuote Delivery</fullName>
        </values>
        <values>
            <fullName>4%2E2-Verbal Commit</fullName>
        </values>
        <values>
            <fullName>6L-Closed Lost</fullName>
        </values>
        <values>
            <fullName>6W-Closed Won</fullName>
        </values>
        <values>
            <fullName>6WP-Closed Won%2FOrder Processed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inner Year Process</fullName>
        <description>SFDC1-7676:Inner Year Record Type to see Inner Year opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>3-Renewal Pending</fullName>
        </values>
        <values>
            <fullName>5-Renewal Contracting</fullName>
        </values>
        <values>
            <fullName>6W-Renewal Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Business Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1-Sales Qualified</fullName>
        </values>
        <values>
            <fullName>2-Need Confirmed</fullName>
        </values>
        <values>
            <fullName>3-Proposal Development</fullName>
        </values>
        <values>
            <fullName>3-Proposal Development and Delivery</fullName>
        </values>
        <values>
            <fullName>4%2E1-Proposal%2FQuote Delivery</fullName>
        </values>
        <values>
            <fullName>4%2E2-Verbal Commit</fullName>
        </values>
        <values>
            <fullName>4-Proposal Accepted and Verbal Commit</fullName>
        </values>
        <values>
            <fullName>5-Contracting</fullName>
        </values>
        <values>
            <fullName>6L-Closed Lost</fullName>
        </values>
        <values>
            <fullName>6W-Closed Won</fullName>
        </values>
        <values>
            <fullName>6WP-Closed Won%2FOrder Processed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal Business</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>3-Renewal Pending</fullName>
        </values>
        <values>
            <fullName>5-Renewal Contracting</fullName>
        </values>
        <values>
            <fullName>6L-Renewal Lost</fullName>
        </values>
        <values>
            <fullName>6W-Renewal Won</fullName>
        </values>
        <values>
            <fullName>6WP-Closed Won%2FOrder Processed</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AISUltimateClient__c</fullName>
        <description>This field is used in WRF_POLK.</description>
        <label>AIS Ultimate Client</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountManagers__c</fullName>
        <description>SFDC1-7037: To Summarize all users in the overlay split (account managers)</description>
        <inlineHelpText>Roll ups all users that are in an Opportunity Split of type Account Managers.</inlineHelpText>
        <label>Account Managers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ActivityCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-547 - To check the Activity is been created on Opportunity</description>
        <label>Activity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalOpportunityFields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6937: Additional Opportunity Fields record associated to the Opportunity</description>
        <inlineHelpText>This field holds the Additional Opportunity Fields</inlineHelpText>
        <label>Additional Opportunity Fields</label>
        <referenceTo>AdditionalOpportunityFields__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AllianceLeadMembers__c</fullName>
        <description>SFDC-5485 - Global Alliances - Upgrade (Amendments)</description>
        <formula>Account.AccountTeamMemberforOppty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Alliance Lead associated with the account.</inlineHelpText>
        <label>Alliance Lead Members</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>SFDC1-919 This formula field calculated the amount from all related products. This field is being used on all page layouts instead of standard Amount field.</description>
        <formula>IF(ISBLANK(Amount),0,Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount calculated from related products</inlineHelpText>
        <label>Total Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssociatedTo__c</fullName>
        <description>SFDC-5603 - Associated To field to tag records [Maintenance field]</description>
        <label>Associated To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AssociatedTo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssociatedwithResponseManagementTeam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4476 : this field shows if Opportunity is Associated with Response Management Team</description>
        <label>Associated with Response Management Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoGeneratedRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-5075: This field will indicate if the subsequent renewal opportunity has been created successfully by Oppy2Oppy code.</description>
        <label>Auto Generated Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6571: Checkbox required to Stop the process because the customer sent in a Notice letter saying they would like to discuss the terms of the contract.
SFDC1-10736: sales profiles given Edit access</description>
        <inlineHelpText>Stop Auto Renew?</inlineHelpText>
        <label>Auto Renew Stopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4728: Create Auto Renewal field on Opportunity that will be updated from Contract.</description>
        <label>Auto-Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AverageDiscountPercentage__c</fullName>
        <description>SFDC1-4275 Average discount percent rolled up from Opportunity product</description>
        <inlineHelpText>Average Discount Percentage on all products</inlineHelpText>
        <label>Average Discount Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BSI__c</fullName>
        <description>SFDC1-4563 This field is used to store the BSI Number
SFDC1-9669:Change BSI# to BSI Membership #</description>
        <label>BSI Membership #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCity__c</fullName>
        <description>SFDC1-5785: New field Bill To : City created</description>
        <inlineHelpText>City description in Billing information</inlineHelpText>
        <label>Bill To : City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToClientName__c</fullName>
        <description>SFDC1-5785: New field Bill To : Client Name created</description>
        <inlineHelpText>Client Name in Billing Address</inlineHelpText>
        <label>Bill To : Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCompanySAP__c</fullName>
        <description>SFDC1-5785: New field Bill To : Company SAP# created</description>
        <inlineHelpText>Company SAP # in Billing information</inlineHelpText>
        <label>Bill To : Company SAP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactEmailAddress__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact Email Address created</description>
        <inlineHelpText>Contact Email Address in Billing information</inlineHelpText>
        <label>Bill To : Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillToContactFirstName__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact First Name created</description>
        <inlineHelpText>First Name in Billing Address</inlineHelpText>
        <label>Bill To : Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactLastName__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact Last Name created</description>
        <inlineHelpText>Last Name in Billing Address</inlineHelpText>
        <label>Bill To : Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactSAP__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact SAP# created</description>
        <inlineHelpText>Contact SAP # in Billing information</inlineHelpText>
        <label>Bill To : Contact SAP#</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactTelephoneNumber__c</fullName>
        <description>SFDC1-5785: New field Bill To : Contact Telephone Number created</description>
        <inlineHelpText>Telephone Contact Number in Billing information</inlineHelpText>
        <label>Bill To : Contact Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCountryNew__c</fullName>
        <description>SFDC1-5785: Bill To : Country contains Country Name in Billing Information</description>
        <inlineHelpText>Country/Territory description in Billing information</inlineHelpText>
        <label>Bill To : Country/Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToPostalZipCode__c</fullName>
        <description>SFDC1-5785: New field Bill To : Postal/Zip Code created</description>
        <inlineHelpText>Postal/Zipcode description in Billing information</inlineHelpText>
        <label>Bill To : Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStateProvince__c</fullName>
        <description>SFDC1-5785: New field Bill To : State/Province created</description>
        <inlineHelpText>State/Province description in Billing information</inlineHelpText>
        <label>Bill To : State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStreet__c</fullName>
        <description>SFDC1-5785: New field Bill To : Street created</description>
        <inlineHelpText>Street description in Billing information</inlineHelpText>
        <label>Bill To : Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingMonitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Select if billing should be monitored.</inlineHelpText>
        <label>Billing Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetRange__c</fullName>
        <description>SFDC-1103 This field captures the budget range for the opportunity</description>
        <inlineHelpText>Please provide the Budget Range.</inlineHelpText>
        <label>Budget Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 25,000</fullName>
                </value>
                <value>
                    <fullName>25,000-50,000</fullName>
                </value>
                <value>
                    <fullName>50,000-100,000</fullName>
                </value>
                <value>
                    <fullName>100,000 - 500,000</fullName>
                </value>
                <value>
                    <fullName>500,000 - 1,000,000</fullName>
                </value>
                <value>
                    <fullName>&gt; 1,000,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <description>SFDC1-9374 calculated field to list all the business lines for all the Opportunity Productswhere the status on the Opportunity Product is &quot;New&quot; or &quot;Existing&quot;.</description>
        <inlineHelpText>This is a calculated field to list all the business lines for all the Opportunity Productswhere the status on the Opportunity Product is &quot;New&quot; or &quot;Existing&quot;.</inlineHelpText>
        <label>Business Line</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ByPassValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6439 This field will be used to by pass the opportunity validations that are executed when opportunity line items are deleted while changing currency.</description>
        <inlineHelpText>This field will be used to by pass the opportunity validations that are executed when opportunity line items are deleted while changing currency.</inlineHelpText>
        <label>By Pass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIDivision__c</fullName>
        <description>SFDC-5699 : Update rollup information from Global Segment/Integnal Business Segment to CIDivision on Opportunity.</description>
        <label>CI Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTOppProdDiscount__c</fullName>
        <description>SFDC-2389 Created for showing different tables on Quote Form depending on Discount% on Oppy Prod.</description>
        <label>COUNTOppProdDiscount</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.DiscountPercentage__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <description>SFDC-1442 Hidden field for the 18-character Id of object records, to be used in Power BI reports</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4394 : Channel Partner field on the Opportunity
SFDC1-7087: Added filter criteria to include on Approved Channel Partner.</description>
        <label>Channel Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.DataGovernanceStatus__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>$User.FullName__c</field>
                <operation>equals</operation>
                <value>Batch Admin</value>
            </filterItems>
            <infoMessage>Accounts displayed below have Account Type field set as &apos;Channel Partner&apos;</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CloseDateOriginal__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>SFDC1-4551. This shows the original close date, defaults to today. 
SFDC-4213 For Opp which gets converted via Lead convert, will be populated as Today + 60 through trigger.</description>
        <label>Close Date - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CloseQuarter__c</fullName>
        <description>SFDC-5520: Calculate &apos;Close Date&apos; Quarter Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF( YEAR(CloseDate) &gt; 2021,
IF(OR(MONTH(CloseDate) = 1, MONTH(CloseDate) = 2, MONTH(CloseDate) = 3), TEXT(YEAR(CloseDate))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(CloseDate) = 4, MONTH(CloseDate) = 5, MONTH(CloseDate) = 6), TEXT(YEAR(CloseDate))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(CloseDate) = 7, MONTH(CloseDate) = 8, MONTH(CloseDate) = 9), TEXT(YEAR(CloseDate))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(CloseDate) = 10, MONTH(CloseDate) = 11, MONTH(CloseDate) = 12),TEXT(YEAR(CloseDate))&amp;&apos;-Q4&apos;,null)))),
IF(YEAR(CloseDate) &lt; 2022,IF(OR(MONTH(CloseDate) = 12, MONTH(CloseDate) = 1, MONTH(CloseDate) = 2), TEXT(YEAR(ADDMONTHS(CloseDate,1)))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(CloseDate) = 3, MONTH(CloseDate) = 4, MONTH(CloseDate) = 5), TEXT(YEAR(ADDMONTHS(CloseDate,1)))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(CloseDate) = 6, MONTH(CloseDate) = 7, MONTH(CloseDate) = 8), TEXT(YEAR(ADDMONTHS(CloseDate,1)))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(CloseDate) = 9, MONTH(CloseDate) = 10, MONTH(CloseDate) = 11), TEXT(YEAR(ADDMONTHS(CloseDate,1)))&amp;&apos;-Q4&apos;,null)))),null))</formula>
        <label>Close Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseYear__c</fullName>
        <description>SFDC-5520: Calculate &apos;Close Date&apos; Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF(NOT(ISBLANK(CloseDate)),IF(YEAR(CloseDate) &lt;= 2021,TEXT(YEAR(ADDMONTHS(CloseDate,1))),TEXT(YEAR(CloseDate))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialStrategyLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC- 5717 Add new field &quot;Commercial Strategy Lead&quot; to the &apos;Details&apos; section in &quot;Opportunity&quot; object</description>
        <inlineHelpText>Commercial Strategy representative assisting in deal (if applicable)</inlineHelpText>
        <label>Commercial Strategy Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompetitorName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-3965 When an opportunity is marked as lost with Lost Reason Code as Competition, make this field mandatory</description>
        <inlineHelpText>Who did we lose this opportunity to?  Select from dropdown or enter if missing</inlineHelpText>
        <label>Competitor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Competitor Name)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompetitorProduct__c</fullName>
        <description>SFDC-3965 When an opportunity is marked as lost with Lost Reason Code as Competition, make this field mandatory</description>
        <inlineHelpText>Which competitor product/s did we lose this opportunity to?  Please list, as this helps the business better understand the competitive landscape</inlineHelpText>
        <label>Competitor Product</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ComplianceRestrictions__c</fullName>
        <description>SFDC1-7602 Opportunity - Field for Legal and Compliance. This is a formula reference to the Account object &quot;Compliance Restrictions&quot; field.
SFDC1-8050 Update formula for Opportunity&apos;s Compliance Restriction field</description>
        <formula>Account.ComplianceRestriction__c</formula>
        <inlineHelpText>For accounts with restrictions compliance approval is required on opportunities before they can be moved to closed won.</inlineHelpText>
        <label>Compliance Restrictions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContinuationEndDate__c</fullName>
        <description>SFDC1-8989 &quot;Continuation End Date&quot; on the &apos;Renewal&apos; opportunity record type.</description>
        <inlineHelpText>Continuation End Date</inlineHelpText>
        <label>Continuation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractBeingRenewed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-1357; Lookup field for Renewal contract. 
SFDC1-5242; Rename the Contract being Renewed field to Originating Contract
SFDC1-6627 Add a filter for this lookup so that only order form can be selected as originating contract.
SFDC-1896 Updated filter criteria for Consulting record type</description>
        <inlineHelpText>Please select a Contract</inlineHelpText>
        <label>Originating Contract</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Only Order Form contracts can be added as originating contract.</errorMessage>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Order Form</value>
            </filterItems>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consulting</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>SFDC1-653 Opportunity Contract End Date will feed the Contract End Date on Contract Object
SFDC1-7027: Updated help text</description>
        <inlineHelpText>Updates to Contract End Date on the Opportunity will update the Contract End Date on the Opportunity Product</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractRenewalDate__c</fullName>
        <description>SFDC-1657 Created for Auto Close Auto Renewals</description>
        <formula>ContractBeingRenewed__r.RenewalDate__c</formula>
        <label>Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractSpecialOptions__c</fullName>
        <description>SFDC-1887 needed to comply with revenue recognition standards</description>
        <inlineHelpText>If the contract contains special terms or agreements for significant discounts then please select yes. i.e. the contract terms are not standard. If contract has standard terms please select no.</inlineHelpText>
        <label>Contract Special Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractStartDateLastFQ__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,

CASE( CEILING( (MONTH(today()) + 1) / 3 ),
2, IF(ContractStartDate__c &gt;= DATE(YEAR(today()),12,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(today()) + 1,2,28), &apos;Yes&apos; , &apos;No&apos;),
3, IF(ContractStartDate__c &gt;= DATE(YEAR(today()),3,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(today()) ,5,31), &apos;Yes&apos; , &apos;No&apos;),
4, IF(ContractStartDate__c &gt;= DATE(YEAR(today()),6,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(today()) ,8,31), &apos;Yes&apos; , &apos;No&apos;),
IF(ContractStartDate__c &gt;= DATE(YEAR(today()),9,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(today()) ,11,30), &apos;Yes&apos; , &apos;No&apos;) ))</formula>
        <label>Contract Start Date Last FQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDateLastFY__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,
If( 
OR(
AND(
MONTH(TODAY()) &lt; 12,
MONTH( ContractStartDate__c) &lt; 12,
YEAR( ContractStartDate__c) = (YEAR(TODAY()) - 1)
),
AND(
MONTH(TODAY()) &gt;= 12,
MONTH( ContractStartDate__c) &gt;= 12,
YEAR( ContractStartDate__c) = (YEAR(TODAY()) - 1)
),
AND(
MONTH(TODAY()) &gt;= 12,
MONTH( ContractStartDate__c) &lt; 12,
YEAR( ContractStartDate__c) = YEAR(TODAY())
),
AND(
MONTH(TODAY()) &gt;= 12,
MONTH( ContractStartDate__c) &lt; 12,
YEAR( ContractStartDate__c) = (YEAR(TODAY())-1)
)
), &apos;Yes&apos;, &apos;No&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date Last FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDateLastMonth__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,
IF(

OR(

AND(
Month(Today())&lt;=11,
MONTH(ContractStartDate__c)= MONTH(Today() )-1 ,YEAR( ContractStartDate__c ) = YEAR(Today())),

AND(
Month(Today())=1,
MONTH(ContractStartDate__c)= 12 ,YEAR( ContractStartDate__c ) = YEAR(Today())-1),


AND(
Month(Today())=12,
MONTH(ContractStartDate__c)= 1,YEAR( ContractStartDate__c ) = YEAR( Today()) - 1)
)
,&apos;Yes&apos;,&apos;No&apos;))</formula>
        <label>Contract Start Date Last Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDateNextFQ__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,
CASE(
CEILING( (MONTH( Today() ) + 1) / 3 ),
2, IF(ContractStartDate__c &gt;= DATE(YEAR(ContractStartDate__c),6,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(ContractStartDate__c) ,8,31), &apos;Yes&apos; , &apos;No&apos;),
3, IF(ContractStartDate__c &gt;= DATE(YEAR(ContractStartDate__c),9,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(ContractStartDate__c) ,11,30), &apos;Yes&apos; , &apos;No&apos;),
4, IF(OR(MOD( (YEAR( Today())+1), 400 ) = 0,AND(MOD( (YEAR( Today())+1), 4 ) = 0,MOD( (YEAR( Today())+1), 100 ) != 0)),
IF(ContractStartDate__c &gt;= DATE(YEAR(Today()),12,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(Today()) + 1,2,29), &apos;Yes&apos; , &apos;No&apos;),
IF(ContractStartDate__c &gt;= DATE(YEAR(Today()),12,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(Today()) + 1,2,28), &apos;Yes&apos; , &apos;No&apos;)),
IF(ContractStartDate__c &gt;= DATE(YEAR(ContractStartDate__c),3,1) &amp;&amp; ContractStartDate__c &lt;= DATE(YEAR(ContractStartDate__c) ,5,31), &apos;Yes&apos; , &apos;No&apos;)))</formula>
        <label>Contract Start Date Next FQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDateNextFY__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,
IF(
OR(
AND(
MONTH(TODAY()) &lt; 12,
MONTH( ContractStartDate__c) &gt;= 12,
YEAR( ContractStartDate__c) = (YEAR(TODAY()) + 1)
),
AND(
MONTH(TODAY()) &lt; 12,
MONTH( ContractStartDate__c) &gt;= 12,
YEAR( ContractStartDate__c) = YEAR(TODAY())
),
AND(
MONTH(TODAY()) &lt; 12,
MONTH( ContractStartDate__c) &lt;= 12,
YEAR( ContractStartDate__c) = (YEAR(TODAY())+1)
),

AND(
MONTH(TODAY()) &gt;= 12,
MONTH( ContractStartDate__c) &gt;= 12,
YEAR( ContractStartDate__c) = YEAR(TODAY())
),
AND(
MONTH(TODAY()) &gt;= 12,
MONTH( ContractStartDate__c) &lt;= 12,
YEAR( ContractStartDate__c) = (YEAR(TODAY()) +1)
)
),&apos; Yes&apos;, &apos;No&apos;))</formula>
        <label>Contract Start Date Next FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDateNextMonth__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,
IF(

OR(

AND(
Month(Today())&lt;=11,
MONTH(ContractStartDate__c)= MONTH((Today() ))+1 ,YEAR( ContractStartDate__c ) = YEAR(Today())),

AND(
Month(Today())=12,
MONTH(ContractStartDate__c)= 1,YEAR( ContractStartDate__c ) = YEAR( Today()) + 1)),&apos;Yes&apos;,&apos;No&apos;))</formula>
        <label>Contract Start Date Next Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDateThisFQ__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,IF(
AND(
CEILING(( MONTH( ContractStartDate__c ) +1) / 3 ) = CEILING( MONTH( TODAY() ) / 3 ),
YEAR( ContractStartDate__c ) = YEAR( TODAY() )
),&apos;Yes&apos;,&apos;No&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date This FQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDateThisFY__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,IF(
OR(
AND(
MONTH(TODAY()) &gt;11,
ContractStartDate__c &gt;= DATE(YEAR(TODAY()),12,01),
ContractStartDate__c &lt;= DATE(YEAR(TODAY() - 1),11,30)
),
AND(
MONTH(TODAY()) &lt;= 11,
ContractStartDate__c &gt;= DATE(YEAR(TODAY()) - 1 ,12,01),
ContractStartDate__c &lt;= DATE(YEAR(TODAY()),11,30)
)
)
, &apos;Yes&apos;, &apos;No&apos;))</formula>
        <label>Contract Start Date This FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDateThisMonth__c</fullName>
        <formula>IF(ISBlank(ContractStartDate__c),&apos;&apos;,
IF(
AND(
MONTH(ContractStartDate__c)= MONTH(TODAY()),
YEAR( ContractStartDate__c ) = YEAR( TODAY() )
),&apos;Yes&apos;,&apos;No&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date This Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>SFDC1-653 Opportunity Contract Start Date will feed the Contract Start Date on Contract Object
SFDC1-7027: Updated help text</description>
        <inlineHelpText>Updates to Contract Start Date on the Opportunity will update the Contract Start Date on the Opportunity Product</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartQuarter__c</fullName>
        <description>SFDC-5520: Calculate &apos;Contract Start Date&apos; Quarter Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF( YEAR(ContractStartDate__c) &gt; 2021,
IF(OR(MONTH(ContractStartDate__c) = 1, MONTH(ContractStartDate__c) = 2, MONTH(ContractStartDate__c) = 3), TEXT(YEAR(ContractStartDate__c))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(ContractStartDate__c) = 4, MONTH(ContractStartDate__c) = 5, MONTH(ContractStartDate__c) = 6), TEXT(YEAR(ContractStartDate__c))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(ContractStartDate__c) = 7, MONTH(ContractStartDate__c) = 8, MONTH(ContractStartDate__c) = 9), TEXT(YEAR(ContractStartDate__c))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(ContractStartDate__c) = 10, MONTH(ContractStartDate__c) = 11, MONTH(ContractStartDate__c) = 12), TEXT(YEAR(ContractStartDate__c))&amp;&apos;-Q4&apos;,null)))),
IF( YEAR(ContractStartDate__c) &lt; 2022,IF(OR(MONTH(ContractStartDate__c) = 12, MONTH(ContractStartDate__c) = 1, MONTH(ContractStartDate__c) = 2), TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1)))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(ContractStartDate__c) = 3, MONTH(ContractStartDate__c) = 4, MONTH(ContractStartDate__c) = 5), TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1)))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(ContractStartDate__c) = 6, MONTH(ContractStartDate__c) = 7, MONTH(ContractStartDate__c) = 8), TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1)))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(ContractStartDate__c) = 9, MONTH(ContractStartDate__c) = 10, MONTH(ContractStartDate__c) = 11), TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1)))&amp;&apos;-Q4&apos;,null)))),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartYear__c</fullName>
        <description>SFDC-5520: Calculate &apos;Contract Start Date&apos; Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF(NOT(ISBLANK(ContractStartDate__c)),IF(YEAR(ContractStartDate__c) &lt;= 2021,TEXT(YEAR(ADDMONTHS(ContractStartDate__c,1))),TEXT(YEAR(ContractStartDate__c))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Year</label>
        <type>Text</type>
    </fields>
</CustomObject>